package at.htl.entity;

public class ParkingSpots {

    Long id;
    Boolean available;
    Person owner;

}
