package at.htl.entity;

public class Person {

    Long customerId;
    String name;
    String licensePlate;
}
